--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Code Wars Practice</title>
   </head>
   <body>
-    <h3>Go got this boo boo</h3>
+    <h3>Go got this</h3>
   </body>
 </html>
